# proxix

./: README.md  setup.cfg
.docker/: config.json
proxix/: channel.py  class_resolution.py  client.py  communicator.py  dispatcher.py  format.py  generated_manager.py  generics.py  processor.py  proxy.py  proxy_manager.py  request.py  response.py  server.py
proxix/communicators/: tcp.py
proxix/formats/: basic.py
proxix/listeners/: tcp.py
proxix/quick/: json_tcp_client.py  json_tcp_threaded_server.py
proxix/serializers/: binary_to_text_serializer.py  json_serializer.py  text_to_binary_serializer.py
proxix/servers/: threaded.py
src/: setup.py
src/proxix/: channel.py  communicator.py  dispatcher.py  format.py  listener.py  manager.py  processor.py  proxy.py  request.py  response.py  serializer.py  server.py  worker.py
src/proxix/formats/: basic.py
src/proxix/listeners/: tcp.py
src/proxix/servers/: threaded.py
tests/: test_class_resolution.py  test_generated_manager.py
