[metadata]
name = proxix
url = https://github.com/jonirap/proxix/
license = GNU 3
author = Jonathan Rapoport
author_email = joni.rapoport@gmail.com
description = Fully python2/3 compatible proxy service
long_description = file: README.md
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development
    Topic :: Software Development :: Interpreters
    Typing :: Typed

[options]
python_requires = >=2.7
setup_requires = setuptools_scm
packages = find:
zip_safe = false
install_requires =
    # direct dependencies
    click >= 7
    pep517
    pip >= 21.2
    # indirect dependencies
    setuptools  # typically needed when pip-tools invokes setup.py
    wheel  # pip plugin needed by pip-tools
    six

[options.packages.find]
exclude = tests, test*

[options.extras_require]
testing =
    pytest
    pytest-rerunfailures
    pytest-xdist
    pytest-parametrization
coverage = pytest-cov

[options.entry_points]
console_scripts =
    pip-compile = piptools.scripts.compile:cli
    pip-sync = piptools.scripts.sync:cli

[tool:pytest]
addopts =
    # `pytest-xdist`:
    --numprocesses=auto
norecursedirs = .* build dist venv test_data piptools/_compat/*
testpaths = tests piptools
filterwarnings =
    always
markers =
    network: mark tests that require internet access

[flake8]
max-line-length = 100
extend-ignore = E203  # E203 conflicts with PEP8; see https://github.com/psf/black#slices

# flake8-pytest-style
# PT001:
pytest-fixture-no-parentheses = true
# PT006:
pytest-parametrize-names-type = tuple
# PT007:
pytest-parametrize-values-type = tuple
pytest-parametrize-values-row-type = tuple
# PT023:
pytest-mark-no-parentheses = true

[isort]
profile = black

[mypy]
disallow_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
ignore_missing_imports = true
no_implicit_optional = true
no_implicit_reexport = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true

# Avoid error: Duplicate module named 'setup'
# https://github.com/python/mypy/issues/4008
exclude = ^tests/test_data/

[mypy-tests.*]
disallow_untyped_defs = false
